--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- interactive graphic for Staten Island - latest version -->
 <!DOCTYPE html> 
 <html lang="en">
 <head>
@@ -35,13 +36,24 @@
   <!-- Ferry -->  
 <div class="ferryWrap">
     <img class="ferry" src="images/betterFerry.png" ></div>
-</div>
+    <div class="line line-1">
+        <div class="wave wave1" style="background-image: url(images/1.png)"></div>
+    </div>
+    <div class="line line-2">
+        <div class="wave wave2" style="background-image: url(images/2.png)"></div>
+    </div>
+    <div class="line line-3">
+        <div class="wave wave2" style="background-image: url(images/3.png)"></div>
+    </div>
+    <div class="line line-4">
+        <div class="wave wave3" style="background-image: url(images/1.png)"></div>
+    </div>
+
 
  <!-- Graphic -->   
 <div class="flowChart">
 
     <body> 
-
             <div class="entry wow animated zoomIn" data-wow-duration="1s">
                 <div class="title big">New York City Department of Transportation</div>
                     <div class="body">
@@ -140,13 +152,12 @@
                                 engineers, marine engineers and marine oilers. These safety mandates, 
                                 coupled with the ongoing staffing issues, have been the driving force behind 
                                 the recurring Staten Island Ferry service disruptions.</p2>
-                            </div> 
+                            </div> </div>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
-                        </div></div>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                        </div>
 
-
-</div>
-</body>
 
 </html>
