Commit before present

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <div class="header">
     <div class="headSea">
         <div class="mid-text">
-            <h4>Interactive</h4>
+            <div class="label">
+            <b>Interactive &nbsp; | &nbsp; </b>Staten Island Advance
+            </div>
         </div>
         <div class="entry wow animated zoomIn" data-wow-duration="5.0s">       
             <h1>Rough Seas for <br>Staten Islanders.</h1>
