--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="headSea">
         <div class="mid-text">
             <div class="label">
-            <b>Interactive &nbsp; | &nbsp; </b>Staten Island Advance
+            <b>Interactive &nbsp; </b> | &nbsp;silive.com
             </div>
         </div>
         <div class="entry wow animated zoomIn" data-wow-duration="5.0s">       
