--- a/preview.html
+++ b/preview.html
@@ -15,7 +15,7 @@
     <div class="headSea">
         <div class="mid-text">
             <div class="label">
-            <b>Interactive &nbsp; | &nbsp; </b>Staten Island Advance
+                <b>Interactive &nbsp; </b> | &nbsp;silive.com
             </div>      
             <h1>Rough Seas for <br>Staten Islanders.</h1>      
             <div class="subhead">
