--- a/preview.html
+++ b/preview.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="ferryWrap">
-        <img class="ferry" src="images/betterFerry.png" ></div>
+        <img class="ferry" src="images/Better Ferry Front.png" ></div>
     </div>
 
 
