--- a/index.html
+++ b/index.html
@@ -43,19 +43,12 @@
         </div>
         <div class="entry wow animated zoomIn" data-wow-duration="1.3s">       
             <div class="subhead">
-            Who's to blame for Staten Island Ferry service issues?</div>
+            The problem involves many, yet no heroes have emerged to rescue those who depend on the boats.
+            <subhead2>Here's who is involved and the role they play.</subhead2></div>
         </div>
         <div class="entry wow animated zoomIn" data-wow-duration="1.8s">   
             <p>
-    The Staten Island Ferry, once regarded as one of the most reliable 
-    forms of mass transit in New York City, has fallen into disarray in recent years. 
-    The Department of Transportation's inability to recruit and retain qualified crew members 
-    during a national maritime workers shortage has resulted in regular service disruptions, 
-    particularly during afternoon and overnight hours. The Marine Engineers Beneficial 
-    Association, which represents a sizable portion of the Ferry's workforce, has argued that 
-    New York City's continued refusal to provide crew members with a “fair and respectful” 
-    new contract has contributed to the staffing issues, and subsequently, the service 
-    disruptions. </p>
+                The Staten Island Ferry, a critical link to Manhattan, used to be known as one of the most reliable forms of mass transit in New York City. Yet ongoing schedule reductions have upended riders, who can no longer depend on the 24-hour ferry service. So what's to blame? The factors range from strict licensing requirements, to labor disputes, short staffing and, in some people's mind, a lack of urgency by the city. </p>
     <div>
         <svg id="arrow">
  
@@ -109,15 +102,9 @@
             <div class="entry wow animated zoomIn" data-wow-duration="7s">
                 <div class="title big">New York City Department of Transportation</div>
                     <div class="body">
-                        <button class="button" onclick="myFunction()">Why they're to blame.</button>
+                        <button class="button" onclick="myFunction()">Their role.</button>
                         <div id="myDIV">
-                       <p2>The New York City Department of Transportation is responsible 
-                       for operating the Staten Island Ferry, one of the largest passenger 
-                       ferry systems in the country. 
-                       In recent years, the Department of 
-                       Transportation has struggled to recruit and retain crew members, leading to 
-                       insufficient staffing levels that have forced recurring service reductions due 
-                       to the department's inability to adequately staff all scheduled trips.</p>
+                       <p2>The New York City Department of Transportation, operator of the Staten Island Ferry, has been unable to adequately staff its boats in recent years, prompting recurring service reductions, particularly during afternoon and overnight hours.</p2>
                        </div>
                 </div> </div> </div>
 
@@ -126,94 +113,60 @@
         <div class="entry wow animated zoomIn" data-wow-duration="9.3s">
             <div class="title big">Marine Engineers Beneficial Association (MEBA)</div>
                 <div class="body">
-                    <button class="button" onclick="myFunction2()">Why they're to blame.</button>
+                    <button class="button" onclick="myFunction2()">Their role.</button>
                     <div id="myDIV2">
-                   <p2> The Marine Engineers Beneficial Association is an international 
-                       maritime union that represents the captains, assistant captains, 
-                       mates, engineers and chief engineers on the Staten Island Ferry. 
-                       The union has been fighting the city for nearly 13 years for a new contract, 
-                       with workers not having received a wage increase since 2010 and union officials c
-                       laiming the lack of a new contract and existing low wages have made it 
-                       more difficult for the city to recruit and retain workers during the 
-                       ongoing national maritime workers shortage.</p2>
+                   <p2> The Marine Engineers Beneficial Association, which represents various Staten Island Ferry crew titles, claims that the city's unwillingness to offer competitive wages during a longstanding contract dispute is the reason the boats have been short-staffed and service has been inconsistent..</p2>
                    </div> </div></div>
 
 
         <div class="reveal">
         <div class="entry wow animated zoomIn" data-wow-duration="11.6s">
-            <div class="title big">Mayor Eric Adams</div>
+            <div class="title big">United States Coast Guard</div>
             <div class="body">
-            <button class="button" onclick="myFunction3()">Why they're to blame.</button>
+            <button class="button" onclick="myFunction3()">Their role.</button>
              <div id="myDIV3">
-            <p2> New York City Mayor Eric Adams is responsible for administering 
-                all city agencies, including the Department of Transportation, which 
-                operates the Staten Island Ferry, the Office of Labor Relations, which 
-                is responsible for negotiating union contracts, and the Office of Management 
-                and Budget, which determines city funding for various agencies. MEBA had 
-                expressed cautious optimism that Mayor Adams would prioritize resolving the 
-                longstanding contract dispute, but little progress has been made since he took 
-                office in January 2022.</p2>
+            <p2> The United States Coast Guard sets forth the licensing requirements and necessary certifications for Staten Island Ferry crew members. The Coast Guard also mandates that each vessel be staffed with at least one captain, one assistant captain and various other positions in order to legally operate.</p2>
             </div> </div></div>
 
 
         <div class="reveal">
          <div class="entry wow animated zoomIn" data-wow-duration="15s">
-                    <div class="title big">New York City Office of Labor Relation</div>
+                    <div class="title big">Mayor of New York City</div>
                     <div class="body">
-                <button class="button" onclick="myFunction4()">Why they're to blame.</button>
+                <button class="button" onclick="myFunction4()">Their role.</button>
                  <div id="myDIV4">
-                <p2> The New York City Office of Labor Relations represents Mayor Eric Adams in all 
-                    labor relations between the City of New York and the labor unions that represent 
-                    city employees, like the ones who operate the Staten Island Ferry. Over the past decade, 
-                    the Office of Labor Relations has reached contract agreements with dozens of unions, with 
-                    the notable exception of the Marine Engineers Beneficial Association.</p2>
+                <p2> The mayor of New York City is responsible for administering all city agencies, including the Department of Transportation, which operates the Staten Island Ferry, the Office of Labor Relations, which is responsible for negotiating union contracts, and the Office of Management and Budget, which determines city funding for various agencies. The ongoing contract dispute has now spanned three mayoral administration, with no resolution in sight.</p2>
                 </div> </div></div>
 
 
         <div class="reveal">
         <div class="entry wow animated zoomIn" data-wow-duration="22.3s">
-                    <div class="title big">New York City Office of Management & Budget</div>
+                    <div class="title big">New York City Office of Labor Relations </div>
                     <div class="body">
-                    <button class="button" onclick="myFunction5()">Why they're to blame.</button>
+                    <button class="button" onclick="myFunction5()">Their role.</button>
                      <div id="myDIV5">
-                    <p2> The New York City Office of Management and Budget develops and executes NYC's 
-                        budget, which is the largest municipal budget in the United States. The office
-                        determines the amount of funding that will be issued to each city agency annually 
-                        and how that funding will be used. Additional funding would likely need to be 
-                        provided to the Department of Transportation to accommodate the higher wages 
-                        being sought by Staten Island Ferry workers. </p2>
+                    <p2> The New York City Office of Labor Relations represents Mayor Eric Adams in all negotiations between the City of New York and labor unions. Over the past decade, the Office of Labor Relations has reached contract agreements with dozens of unions, with the notable exception of the Marine Engineers Beneficial Association.  </p2>
                     </div> </div></div>
 
 
     
         <div class="reveal">
                     <div class="entry wow animated zoomIn" data-wow-duration="2.6s">
-                        <div class="title big">New York City Council</div>
+                        <div class="title big">New York City Office of Management and Budget</div>
                         <div class="body">
-                        <button class="button" onclick="myFunction6()">Why they're to blame.</button>
+                        <button class="button" onclick="myFunction6()">Their role.</button>
                          <div id="myDIV6">
-                        <p2> The New York City Council introduces and votes on city legislation, 
-                            negotiates the City's budget with the mayor and monitors city agencies, 
-                            like the Department of Transportation, to make sure they're effectively 
-                            serving New Yorkers. Despite the repeated service disruptions on the Staten Island Ferry, 
-                            which are in violation of Local Law 88 of 2013 requiring half-hourly service, the City 
-                            Council has done little to hold the Department of Transportation accountable.</p2>
+                        <p2> The New York City Office of Management and Budget develops and executes NYC’s budget, determining the amount of funding that will be issued annually to each city agency. Additional funding would likely need to be provided to the Department of Transportation to accommodate higher wages for Staten Island Ferry workers. </p2>
                         </div> </div></div>
 
         
         <div class="reveal">
                         <div class="entry wow animated zoomIn" data-wow-duration="3s">
-                            <div class="title big">United States Coast Guard</div>
+                            <div class="title big">New York City Council</div>
                             <div class="body">
-                            <button class="button" onclick="myFunction7()">Why they're to blame.</button>
+                            <button class="button" onclick="myFunction7()">Their role.</button>
                              <div id="myDIV7">
-                            <p2> The United States Coast Guard sets forth the licensing requirements and 
-                                necessary certifications for Staten Island Ferry crew members. 
-                                The Coast Guard also mandates that each vessel be staffed with at least one 
-                                captain, one assistant captain and various other positions, like chief marine 
-                                engineers, marine engineers and marine oilers. These safety mandates, 
-                                coupled with the ongoing staffing issues, have been the driving force behind 
-                                the recurring Staten Island Ferry service disruptions.</p2>
+                            <p2> The New York City Council monitors city agencies to ensure they’re effectively serving New Yorkers. Despite the repeated service disruptions on the Staten Island Ferry, which are in violation of a local law requiring half-hourly service, the City Council has struggled to hold the Department of Transportation accountable.</p2>
                             </div> </div>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
