--- a/preview.html
+++ b/preview.html
@@ -19,7 +19,8 @@
             </div>      
             <h1>Rough Seas for <br>Staten Islanders.</h1>      
             <div class="subhead">
-            Who's to blame for Staten Island Ferry service issues? <br>Explore the complex list of culprits.</div>
+            How has iconic Staten Island Ferry become riddled with service disruptions? 
+            <br><subhead2>Explore the complex list of culprits.</subhead2></div>
             </div>
             <a href="index.html" target="_blank">Click here</a>
     </div>
